--- a/templates/users.html
+++ b/templates/users.html
@@ -5,13 +5,20 @@
     <title>Users - MovieWeb App</title>
 </head>
 <body>
-    <h1>Users</h1>
-    <ul>
-        {% for user in users %}
-            <li>
-                <a href="/users/{{ user.id }}">{{ user.name }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+    {% extends "base.html" %}
+
+{% block title %}Users - MovieWeb App{% endblock %}
+
+{% block content %}
+<h1 class="text-primary">Users</h1>
+
+<ul class="list-group">
+    {% for user in users %}
+        <li class="list-group-item">
+            <a href="/users/{{ user.id }}">{{ user.name }}</a>
+        </li>
+    {% endfor %}
+</ul>
+{% endblock %}
 </body>
 </html>
