--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -5,13 +5,19 @@
     <title>Add User - MovieWeb App</title>
 </head>
 <body>
-    <h1>Add New User</h1>
-    <form method="post">
-        <label for="name">User Name:</label>
-        <input type="text" id="name" name="name" required>
-        <button type="submit">Add User</button>
-    </form>
+    {% extends "base.html" %}
+{% block title %}Add User - MovieWeb App{% endblock %}
 
+{% block content %}
+<h1>Add New User</h1>
+<form method="POST" action="{{ url_for('add_user') }}">
+  <div class="mb-3">
+    <label for="name" class="form-label">User Name</label>
+    <input type="text" class="form-control" id="name" name="name" required>
+  </div>
+  <button type="submit" class="btn btn-primary">Add User</button>
+</form>
+{% endblock %}
     <p><a href="/users">← Back to Users</a></p>
 </body>
 </html>
