--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}MovieWeb App{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <!-- Bootstrap CSS -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -37,7 +37,6 @@
           <a class="nav-link" href="{{ url_for('list_users') }}">Users</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('add_user') }}">Add User</a>
         </li>
       </ul>
     </div>
