--- a/templates/user_movies.html
+++ b/templates/user_movies.html
@@ -6,40 +6,44 @@
 </head>
 <body>
     {% extends "base.html" %}
-
 {% block title %}{{ user.name }}'s Movies - MovieWeb App{% endblock %}
 
 {% block content %}
-<h1 class="text-primary mb-4">{{ user.name }}'s Favorite Movies</h1>
+<h1 class="mb-4">{{ user.name }}'s Favorite Movies</h1>
 
-<a href="/users/{{ user.id }}/add_movie" class="btn btn-success mb-4">+ Add New Movie</a>
-
-{% if movies %}
-<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Director</th>
+      <th>Year</th>
+      <th>Rating</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
     {% for movie in movies %}
-    <div class="col">
-        <div class="card h-100 shadow-sm">
-            <div class="card-body">
-                <h5 class="card-title">{{ movie.name }}</h5>
-                <p class="card-text">
-                    <strong>Director:</strong> {{ movie.director }}<br>
-                    <strong>Year:</strong> {{ movie.year }}<br>
-                    <strong>Rating:</strong> {{ movie.rating }}
-                </p>
-            </div>
-            <div class="card-footer d-flex justify-content-between">
-                <a href="/users/{{ user.id }}/update_movie/{{ movie.id }}" class="btn btn-sm btn-outline-primary">Edit</a>
-                <form action="/users/{{ user.id }}/delete_movie/{{ movie.id }}" method="post" style="margin: 0;">
-                    <button type="submit" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this movie?')">Delete</button>
-                </form>
-            </div>
-        </div>
-    </div>
+    <tr>
+      <td>{{ movie.name }}</td>
+      <td>{{ movie.director }}</td>
+      <td>{{ movie.year }}</td>
+      <td>{{ movie.rating }}</td>
+      <td>
+        <a href="{{ url_for('update_movie', user_id=user.id, movie_id=movie.id) }}" class="btn btn-sm btn-warning">Edit</a>
+        <form action="{{ url_for('delete_movie', user_id=user.id, movie_id=movie.id) }}" method="post" class="d-inline">
+          <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('Delete this movie?');">Delete</button>
+        </form>
+      </td>
+    </tr>
+    {% else %}
+    <tr>
+      <td colspan="5">No movies found.</td>
+    </tr>
     {% endfor %}
-</div>
-{% else %}
-    <p class="text-muted">No movies found. Click "Add New Movie" to get started.</p>
-{% endif %}
+  </tbody>
+</table>
+
+<a href="{{ url_for('add_movie', user_id=user.id) }}" class="btn btn-success">Add New Movie</a>
 {% endblock %}
 </body>
 </html>
