--- a/templates/users.html
+++ b/templates/users.html
@@ -6,19 +6,24 @@
 </head>
 <body>
     {% extends "base.html" %}
-
 {% block title %}Users - MovieWeb App{% endblock %}
 
 {% block content %}
-<h1 class="text-primary">Users</h1>
+<h1 class="mb-4">Users</h1>
 
 <ul class="list-group">
-    {% for user in users %}
-        <li class="list-group-item">
-            <a href="/users/{{ user.id }}">{{ user.name }}</a>
-        </li>
-    {% endfor %}
+  {% for user in users %}
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a href="{{ url_for('user_movies', user_id=user.id) }}">{{ user.name }}</a>
+    <span class="badge bg-primary rounded-pill">{{ user.id }}</span>
+  </li>
+  {% else %}
+  <li class="list-group-item">No users found.</li>
+  {% endfor %}
 </ul>
+
+<a href="{{ url_for('add_user') }}" class="btn btn-success mt-4">Add New User</a>
 {% endblock %}
+<a href="{{ url_for('add_user') }}" class="fab">+</a>
 </body>
 </html>
