--- a/templates/error.html
+++ b/templates/error.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Error</h1>
     <p>{{ message or "Something went wrong." }}</p>
-    <a href="{{ url_for('list_users') }}">← Back to Home</a>
+    <a href="{{ url_for('user.list_users') }}">← Back to Home</a>
 </body>
 </html>
